# MCP-Multi-Agent-Deep-Researcher

./: .env  README.md  mcp.config.json  pyproject.toml
Multi-Agent-deep-researcher-mcp-windows-linux/: agents.py  deepseek_llm.py  linkup_only.py  server.py
